--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -1,5 +1,10 @@
 name: Publish Release
-on: [push]
+on: 
+  push:
+    branches: 
+      - master
+    tags:
+      - v*
 jobs:
   build:
     runs-on: ubuntu-latest
