:recycle: Refactor action to be composite. Publish v2 Results in faster execution and no external dependencies

--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -2,7 +2,7 @@ name: Dependabot auto-merge
 
 on:
   pull_request_target:
-    branches: [ master ]
+    branches: [ main ]
     types: [ opened ]
 
 permissions:
