--- a/action.yml
+++ b/action.yml
@@ -1,16 +1,19 @@
-name: 'Github Release'
-author: 'Lars Gohr'
+name: "Github Release"
+author: "Lars Gohr"
 branding:
-  icon: 'git-branch'
-  color: 'gray-dark'
-description: 'Publish Github releases from an action'
-env:
-  GITHUB_TOKEN: 'The Github Token'
+  icon: "git-branch"
+  color: "gray-dark"
+description: "Publish Github releases from an action"
+
 inputs:
-  release:
-    description: 'The name of the release to publish'
+  title:
+    description: "The name of the release to publish"
     required: true
-args: ['The release name']
+
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: 'composite'
+  steps:      
+    - run: $GITHUB_ACTION_PATH/entrypoint.sh
+      shell: bash
+      env:
+        INPUT_TITLE: ${{ inputs.title }}
