--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,9 @@ inputs:
   title:
     description: "The name of the release to publish"
     required: true
+  workdir:
+    description: "Directory of the repository that the should create the release"
+    required: false
 
 runs:
   using: 'composite'
@@ -17,3 +20,4 @@ runs:
       shell: bash
       env:
         INPUT_TITLE: ${{ inputs.title }}
+        INPUT_WORKDIR: ${{ inputs.workdir }}
