--- a/action.yml
+++ b/action.yml
@@ -21,4 +21,4 @@ runs:
       env:
         INPUT_TITLE: ${{ inputs.title }}
         INPUT_WORKDIR: ${{ inputs.workdir }}
-        INPUT_TAGS: ${{ inputs.tags }}
+        INPUT_TAG: ${{ inputs.tag }}
