fix: reduced to just tag, saving notes for future release with testing

--- a/action.yml
+++ b/action.yml
@@ -21,3 +21,4 @@ runs:
       env:
         INPUT_TITLE: ${{ inputs.title }}
         INPUT_WORKDIR: ${{ inputs.workdir }}
+        INPUT_TAG: ${{ inputs.tag }}
