🐛 Prevent double tag on tagged releases. Introduce integration test for tagged releases. Thank you @seanwessmith for the hint

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,13 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         title: ${{ github.sha }}
+    - name: Create a tagged Release
+      uses: elgohr/Github-Release-Action@main
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        title: ${{ github.sha }}
+        tag: ${{ github.sha }}
 
   release:
     runs-on: ubuntu-latest
