--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,9 @@ inputs:
   tag:
     description: "The tag of the release to publish"
     required: false
+  prerelease:
+    description: "Publishes a prerelease"
+    required: false
 
 runs:
   using: 'composite'
@@ -25,3 +28,4 @@ runs:
         INPUT_TITLE: ${{ inputs.title }}
         INPUT_WORKDIR: ${{ inputs.workdir }}
         INPUT_TAG: ${{ inputs.tag }}
+        INPUT_PRERELEASE: ${{ inputs.prerelease }}
